Fix align center

--- a/scss/hightrack/_common.scss
+++ b/scss/hightrack/_common.scss
@@ -75,20 +75,20 @@
 }
 
 .align-center-block {
-    display: table;
-    margin: 0 auto;
+    //display: table;
+    //margin: 0 auto;
     text-align: center;
 }
 
 .align-left-block {
-    display: table;
-    margin: 0 auto;
+    //display: table;
+    //margin: 0 auto;
     text-align: left;
 }
 
 .align-right-block {
-    display: table;
-    margin: 0 auto;
+    //display: table;
+    //margin: 0 auto;
     text-align: right;
 }
 
